[package]
name = "mol-wasm"
version = "0.0.1"
authors = ["Tom Young"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.30"
kiss3d = { version = "0.35"}
wasm-bindgen = "0.2.83"
rand = "*"

[dependencies.web-sys]
version = "0.3.60"
features = [
    'CssStyleDeclaration',
    'Document',
    'Element',
    'HtmlElement',
    'Window',
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
